0022753: Fix mismatch new/delete in Standard_Failure.cxx